--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+
+*{
+  color:whitesmoke;
+  background-color: #282c34;
+}
 .App {
   text-align: center;
 }
@@ -36,3 +41,25 @@
     transform: rotate(360deg);
   }
 }
+
+.itemtdl{
+  display:  flex;
+  flex-direction:  row;
+  width: 100%;
+  align-items: center;
+}
+
+
+.itemtdl .editBtn{
+
+}
+
+.itemtdl .delBtn{
+
+}
+
+.itemtdl .margincontainer{
+  
+
+}
+
